--- a/aula06/ex005.html
+++ b/aula06/ex005.html
@@ -3,9 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Primeiros passos com o DOM</title>
+    <style>
+        body{
+            background-color: black;
+            color: white;
+            font: normal 18pt Arial;
+        }
+    </style>
 </head>
 <body>
-    
+    <h1>Iniciando estudos com DOM</h1>
+    <p>Aqui vai o resultado</p>
+    <p>Aprendendo a usar o <strong>DOM</strong> em JavaScript.</p>
+    <div id="msg">Clique em mim</div>
+    <script>
+        var d = document.querySelector('div#msg')
+        d.style.background = 'blue'
+        //var d = window.document.getElementById('msg')
+        //var d = window.document.getElementsByName('msg')[0]
+        //d.innerText = 'Olá!'
+        //window.document.getElementById('msg').innerText = 'Olá'
+        //d.style.background = 'green'
+        //d.innerText = 'Estou aguarando'
+         //var p1 = document.getElementsByTagName('p') [1]
+        //document.write(p1.innerHTML)
+        //document.getElementsByClassName
+    </script>
 </body>
 </html>
